# bullish

./: .gitattributes  .pre-commit-config.yaml  noxfile.py  pyproject.toml
.github/actions/install-ta-lib/: action.yaml
.github/workflows/: pipeline.yaml  tests-runner.yaml
bullish/: analysis.py  app.py  filter.py  view.py
bullish/analysis/: analysis.py  backtest.py  filter.py  functions.py  indicators.py  openai.py  portfolio.py  predefined_filters.py  returns.py
bullish/app/: app.py
bullish/database/: crud.py  schemas.py
bullish/database/scripts/: stamp.py  upgrade.py
bullish/figures/: figures.py
bullish/interface/: interface.py
bullish/jobs/: models.py  tasks.py
bullish/patterns/: candlestick.py  patterns.py
bullish/strategy/: func.py  inputs.py  model.py  plot.py  strategy.py
bullish/tests/: test_analysis.py
bullish/trend/: lines.py
bullish/utils/: checks.py
patterns/: patterns.py
strategy/: func.py  inputs.py  model.py  plot.py  strategy.py
ta-lib-0.6.4/: Makefile  config.status  libtool
ta-lib-0.6.4/src/: Makefile
ta-lib-0.6.4/src/.libs/: libta-lib.so.0.0.0
tests/: conftest.py  test_analysis.py  test_backtesting.py  test_bullish.py  test_checks.py  test_figure.py  test_filter.py  test_indicators.py  test_industry_returns.py  test_industry_views.py  test_open_ai.py  test_view.py
tests/data/: bear.db  custom_filter.json  filter_bear.db  filter_bear_series.db  prices.csv  prices_msft.csv  prices_nvda.csv  prices_pltr.csv  prices_rhm.de.csv  prices_smci.csv  prices_tsm.csv  tickers.json
trend/: lines.py
(+22 files in other folders)
